--- a/assets/css/own.css
+++ b/assets/css/own.css
@@ -374,45 +374,45 @@ body {
   .fea-img {
     position: absolute;
     left: 0px;
-    bottom: 400px;
+    top: 10px;
     z-index: 100;
   }
   .fea-w-280 {
-    width: 280px;
+    width: 130px;
   }
   .fea-hand-img {
     position: absolute;
     left: 0px;
-    bottom: 100px;
+    top: 60px;
     z-index: 100;
   }
   .fea-hand-w {
-    width: 350px;
+    width: 130px;
   }
   .home-green-30 {
     background-color: #60ba62;
-    width: 30px;
-    height: 30px;
-    border-radius: 15px;
+    width: 15px;
+    height: 15px;
+    border-radius: 7px;
     position: relative;
     right: 5%;
     top: 0%;
   }
   .home-gray-30 {
     background-color: #ebebeb;
-    width: 206px;
-    height: 206px;
-    border-radius: 103px;
-    position: relative;
-    right: 5%;
-    top: 40px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    position: absolute;
+    left: 5%;
+    top: 55%;
   }
   .third-top-img {
     position: absolute;
-    left: 60px;
+    left: 20px;
   }
   .thi-t-img {
-    width: 200px;
+    width: 120px;
   }
   .third-g-30 {
     background-color: #60ba62;
@@ -420,24 +420,24 @@ body {
     height: 30px;
     border-radius: 25px;
     position: relative;
-    right: 0%;
-    top: 27px;
+    right: 10%;
+    top: 0px;
   }
   .fourth-img-des {
     position: absolute;
-    left: 50px;
-    top: 150px;
+    left: 8px;
+    top: 40px;
   }
   .fourth-w {
-    width: 270px;
+    width: 70px;
   }
   .fourth-des-text {
     position: absolute;
-    right: -60px;
+    right: 0px;
     bottom: -120px;
   }
   .fourth-des-width {
-    width: 200px;
+    width: 100px;
   }
   .img-green-home {
     background-color: #60ba62;
@@ -445,7 +445,7 @@ body {
     height: 20px;
     border-radius: 10px;
     position: absolute;
-    left: -100px;
+    display: none;
     bottom: 20px;
   }
   .img-gray-home {
@@ -453,8 +453,8 @@ body {
     width: 148px;
     height: 148px;
     border-radius: 74px;
-    position: relative;
-    right: 99%;
+    position: absolute;
+    left: 10%;
     top: 10px;
   }
 }
@@ -799,11 +799,11 @@ body {
   .fea-img {
     position: absolute;
     left: 0px;
-    bottom: 400px;
+    top: 10px;
     z-index: 100;
   }
   .fea-w-280 {
-    width: 280px;
+    width: 130px;
   }
   .fea-hand-img {
     position: absolute;
