--- a/assets/css/own.css
+++ b/assets/css/own.css
@@ -633,6 +633,76 @@ body {
     top: 0px;
     z-index: 10;
   }
+  .app-green-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    left: 5%;
+    top: 44%;
+  }
+  .app-gray-148 {
+    background-color: #ebebeb;
+    width: 148px;
+    height: 148px;
+    border-radius: 74px;
+    position: absolute;
+    left: 75px;
+    top: 120px;
+  }
+  .app-green-30 {
+    background-color: #60ba62;
+    width: 30px;
+    height: 30px;
+    border-radius: 25px;
+    position: relative;
+    right: 0%;
+    top: 27px;
+  }
+  .app-img {
+    width: 270px;
+  }
+  .app-absolute {
+    position: absolute;
+    left: 60px;
+  }
+  .app-gray-text {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-gray-text-center {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-g-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    margin-right: -150px;
+    top: 50%;
+  }
+  .app-gray-200 {
+    background-color: #ebebeb;
+    width: 220px;
+    height: 220px;
+    border-radius: 110px;
+    position: relative;
+    right: 0;
+    top: 10px;
+  }
+  .app-gray-200-abs {
+    width: 200px;
+    position: absolute;
+    top: 100px;
+    right: 100px;
+  }
 }
 @media (min-width: 481px) {
   /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
@@ -1241,6 +1311,76 @@ body {
     top: 0px;
     z-index: 10;
   }
+  .app-green-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    left: 5%;
+    top: 44%;
+  }
+  .app-gray-148 {
+    background-color: #ebebeb;
+    width: 148px;
+    height: 148px;
+    border-radius: 74px;
+    position: absolute;
+    left: 75px;
+    top: 120px;
+  }
+  .app-green-30 {
+    background-color: #60ba62;
+    width: 30px;
+    height: 30px;
+    border-radius: 25px;
+    position: relative;
+    right: 0%;
+    top: 27px;
+  }
+  .app-img {
+    width: 270px;
+  }
+  .app-absolute {
+    position: absolute;
+    left: 60px;
+  }
+  .app-gray-text {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-gray-text-center {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-g-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    margin-right: -150px;
+    top: 50%;
+  }
+  .app-gray-200 {
+    background-color: #ebebeb;
+    width: 220px;
+    height: 220px;
+    border-radius: 110px;
+    position: relative;
+    right: 0;
+    top: 10px;
+  }
+  .app-gray-200-abs {
+    width: 200px;
+    position: absolute;
+    top: 100px;
+    right: 100px;
+  }
 }
 @media (min-width: 641px) {
   /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
@@ -1844,6 +1984,76 @@ body {
   .contact-ab {
     display: block;
     position: relative;
+  }
+  .app-green-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    left: 5%;
+    top: 44%;
+  }
+  .app-gray-148 {
+    background-color: #ebebeb;
+    width: 148px;
+    height: 148px;
+    border-radius: 74px;
+    position: absolute;
+    left: 75px;
+    top: 120px;
+  }
+  .app-green-30 {
+    background-color: #60ba62;
+    width: 30px;
+    height: 30px;
+    border-radius: 25px;
+    position: relative;
+    right: 0%;
+    top: 27px;
+  }
+  .app-img {
+    width: 270px;
+  }
+  .app-absolute {
+    position: absolute;
+    left: 60px;
+  }
+  .app-gray-text {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-gray-text-center {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-g-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    margin-right: -150px;
+    top: 50%;
+  }
+  .app-gray-200 {
+    background-color: #ebebeb;
+    width: 220px;
+    height: 220px;
+    border-radius: 110px;
+    position: relative;
+    right: 0;
+    top: 10px;
+  }
+  .app-gray-200-abs {
+    width: 200px;
+    position: absolute;
+    top: 100px;
+    right: 100px;
   }
 }
 @media (min-width: 961px) {
@@ -2449,6 +2659,76 @@ body {
     display: block;
     position: relative;
   }
+  .app-green-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    left: 5%;
+    top: 44%;
+  }
+  .app-gray-148 {
+    background-color: #ebebeb;
+    width: 148px;
+    height: 148px;
+    border-radius: 74px;
+    position: absolute;
+    left: 75px;
+    top: 120px;
+  }
+  .app-green-30 {
+    background-color: #60ba62;
+    width: 30px;
+    height: 30px;
+    border-radius: 25px;
+    position: relative;
+    right: 0%;
+    top: 27px;
+  }
+  .app-img {
+    width: 270px;
+  }
+  .app-absolute {
+    position: absolute;
+    left: 60px;
+  }
+  .app-gray-text {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-gray-text-center {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-g-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    margin-right: -150px;
+    top: 50%;
+  }
+  .app-gray-200 {
+    background-color: #ebebeb;
+    width: 220px;
+    height: 220px;
+    border-radius: 110px;
+    position: relative;
+    right: 0;
+    top: 10px;
+  }
+  .app-gray-200-abs {
+    width: 200px;
+    position: absolute;
+    top: 100px;
+    right: 100px;
+  }
 }
 @media (min-width: 1025px) {
   .navbar .navbar-nav .nav-item a,
@@ -3050,6 +3330,76 @@ body {
   .contact-ab {
     display: block;
     position: relative;
+  }
+  .app-green-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    left: 5%;
+    top: 44%;
+  }
+  .app-gray-148 {
+    background-color: #ebebeb;
+    width: 148px;
+    height: 148px;
+    border-radius: 74px;
+    position: absolute;
+    left: 75px;
+    top: 120px;
+  }
+  .app-green-30 {
+    background-color: #60ba62;
+    width: 30px;
+    height: 30px;
+    border-radius: 25px;
+    position: relative;
+    right: 0%;
+    top: 27px;
+  }
+  .app-img {
+    width: 270px;
+  }
+  .app-absolute {
+    position: absolute;
+    left: 60px;
+  }
+  .app-gray-text {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-gray-text-center {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
+  }
+  .app-g-50 {
+    background-color: #60ba62;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    position: absolute;
+    margin-right: -150px;
+    top: 50%;
+  }
+  .app-gray-200 {
+    background-color: #ebebeb;
+    width: 220px;
+    height: 220px;
+    border-radius: 110px;
+    position: relative;
+    right: 0;
+    top: 10px;
+  }
+  .app-gray-200-abs {
+    width: 200px;
+    position: absolute;
+    top: 100px;
+    right: 100px;
   }
 }
 @media (min-width: 1281px) {
@@ -3671,7 +4021,7 @@ body {
     border-radius: 74px;
     position: absolute;
     left: 75px;
-    top: 200px;
+    top: 120px;
   }
   .app-green-30 {
     background-color: #60ba62;
