--- a/assets/css/own.css
+++ b/assets/css/own.css
@@ -131,14 +131,15 @@ body {
     height: 249px;
   }
   .apple {
-    width: 200px;
+    width: 150px;
     display: block;
     margin: auto;
   }
   .google {
-    width: 120px;
+    width: 80px;
     display: block;
     margin: auto;
+    margin-top: 30px;
   }
   .contact-form {
     background-color: transparent;
@@ -644,40 +645,43 @@ body {
   }
   .app-gray-148 {
     background-color: #ebebeb;
-    width: 148px;
-    height: 148px;
-    border-radius: 74px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
     position: absolute;
-    left: 75px;
-    top: 120px;
+    left: 5px;
+    top: 10px;
   }
   .app-green-30 {
     background-color: #60ba62;
     width: 30px;
     height: 30px;
     border-radius: 25px;
-    position: relative;
-    right: 0%;
-    top: 27px;
+    position: absolute;
+    left: 5%;
+    top: 12%;
   }
   .app-img {
-    width: 270px;
+    width: 170px;
   }
   .app-absolute {
     position: absolute;
-    left: 60px;
+    left: 30px;
+    top: 11px;
   }
-  .app-gray-text {
-    font-size: 44px;
+  .app-text-gray {
+    font-size: 25px;
     color: #959494;
     font-family: "SSTBold";
     text-align: center;
+    margin-top: 50px;
   }
   .app-gray-text-center {
-    font-size: 44px;
+    font-size: 25px;
     color: #959494;
     font-family: "SSTBold";
     text-align: center;
+    margin-top: 50px;
   }
   .app-g-50 {
     background-color: #60ba62;
@@ -690,18 +694,18 @@ body {
   }
   .app-gray-200 {
     background-color: #ebebeb;
-    width: 220px;
-    height: 220px;
-    border-radius: 110px;
+    width: 120px;
+    height: 120px;
+    border-radius: 60px;
     position: relative;
     right: 0;
-    top: 10px;
+    top: 58px;
   }
   .app-gray-200-abs {
     width: 200px;
     position: absolute;
-    top: 100px;
-    right: 100px;
+    top: -41px;
+    right: 50px;
   }
 }
 @media (min-width: 481px) {
@@ -819,14 +823,15 @@ body {
     display: block;
   }
   .apple {
-    width: 200px;
+    width: 150px;
     display: block;
     margin: auto;
   }
   .google {
-    width: 120px;
+    width: 80px;
     display: block;
     margin: auto;
+    margin-top: 30px;
   }
   .contact-form {
     background-color: transparent;
@@ -1368,18 +1373,18 @@ body {
   }
   .app-gray-200 {
     background-color: #ebebeb;
-    width: 220px;
-    height: 220px;
-    border-radius: 110px;
+    width: 120px;
+    height: 120px;
+    border-radius: 60px;
     position: relative;
     right: 0;
-    top: 10px;
+    top: 58px;
   }
   .app-gray-200-abs {
     width: 200px;
     position: absolute;
-    top: 100px;
-    right: 100px;
+    top: -41px;
+    right: 50px;
   }
 }
 @media (min-width: 641px) {
@@ -3364,6 +3369,7 @@ body {
   .app-absolute {
     position: absolute;
     left: 60px;
+    top: 15%;
   }
   .app-gray-text {
     font-size: 44px;
@@ -4038,6 +4044,7 @@ body {
   .app-absolute {
     position: absolute;
     left: 60px;
+    top: 15%;
   }
   .app-gray-text {
     font-size: 44px;
