--- a/assets/css/own.css
+++ b/assets/css/own.css
@@ -955,7 +955,7 @@ body {
     height: 10px;
     border-radius: 5px;
     position: relative;
-    margin-right: 43%;
+    margin-right: 50%;
     top: 58%;
   }
   .green-10-88 {
@@ -969,11 +969,11 @@ body {
   }
   .green-30-80 {
     background-color: #60ba62;
-    width: 30px;
-    height: 30px;
-    border-radius: 15px;
+    width: 24px;
+    height: 24px;
+    border-radius: 12px;
     position: relative;
-    right: 43%;
+    right: 49%;
     top: 26%;
   }
   .green-97-27 {
@@ -1043,8 +1043,8 @@ body {
   }
   .absolute-r-60 {
     position: absolute;
-    right: -31px;
-    bottom: -120px;
+    right: -10px;
+    bottom: -135px;
   }
   .f-w-200 {
     width: 140px;
@@ -1060,34 +1060,52 @@ body {
   }
   .f-gray-148 {
     background-color: #ebebeb;
-    width: 100px;
-    height: 100px;
-    border-radius: 74px;
+    width: 70px;
+    height: 70px;
+    border-radius: 35px;
     position: relative;
     right: 72%;
-    top: 10px;
+    top: 150px;
   }
   .fif-gr-30 {
     background-color: #60ba62;
     width: 30px;
     height: 30px;
     border-radius: 15px;
-    position: relative;
-    right: 5%;
-    top: 2%;
+    position: absolute;
+    left: 5%;
+    top: 5%;
+  }
+  .fif-grr-10 {
+    background-color: #60ba62;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    position: absolute;
+    left: 24%;
+    margin-top: 43%;
+  }
+  .fif-grr-30 {
+    background-color: #60ba62;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    position: absolute;
+    left: 16%;
+    margin-top: -30%;
   }
   .fif-absolute-489 {
     width: 190px;
     height: 241px;
     position: relative;
-    right: 1%;
+    right: 18%;
     top: 62%;
   }
   .fif-absolute-489-l {
     width: 190px;
     height: 241px;
     position: absolute;
-    left: 3%;
+    left: 18%;
     top: 58.5%;
   }
   .navbar-area.is-sticky {
@@ -1095,13 +1113,14 @@ body {
   }
   .fif-gray-206 {
     background-color: #ebebeb;
-    width: 206px;
-    height: 206px;
-    border-radius: 103px;
-    position: relative;
-    right: 99%;
-    display: none;
-    top: 10px;
+    width: 66px;
+    height: 66px;
+    border-radius: 33px;
+    position: absolute;
+    left: 5%;
+    /* display: none; */
+    /* top: 10px; */
+    margin-top: -70px;
   }
   .fea-img {
     position: absolute;
@@ -1206,7 +1225,7 @@ body {
     top: 20px;
   }
   .faq-img-270 {
-    width: 200px;
+    width: 150px;
   }
   .faq-g-20 {
     background-color: #60ba62;
@@ -1220,7 +1239,7 @@ body {
   .faq-fourth-img {
     position: absolute;
     right: 0px;
-    bottom: 300px;
+    bottom: 120px;
   }
   .faq-img-200 {
     width: 120px;
@@ -1266,6 +1285,15 @@ body {
     position: relative;
     right: 99%;
     top: 10px;
+  }
+  .faq-fif-grr-30 {
+    background-color: #60ba62;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    position: absolute;
+    left: 16%;
+    margin-top: -30%;
   }
   .faq-man-img {
     width: 489px;
@@ -1364,12 +1392,12 @@ body {
   }
   .app-green-50 {
     background-color: #60ba62;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
     position: absolute;
     left: 5%;
-    top: 44%;
+    top: 61%;
   }
   .app-gray-148 {
     background-color: #ebebeb;
@@ -1417,8 +1445,17 @@ body {
     height: 50px;
     border-radius: 25px;
     position: absolute;
-    margin-right: -150px;
-    top: 50%;
+    left: 62px;
+    top: 71%;
+  }
+  .app-g-10 {
+    background-color: #60ba62;
+    width: 15px;
+    height: 15px;
+    border-radius: 25px;
+    position: absolute;
+    left: 137px;
+    top: 69%;
   }
   .app-gray-200 {
     background-color: #ebebeb;
@@ -1646,7 +1683,7 @@ body {
     height: 10px;
     border-radius: 5px;
     position: relative;
-    margin-right: 43%;
+    margin-right: 50%;
     top: 58%;
   }
   .green-10-88 {
@@ -1660,11 +1697,11 @@ body {
   }
   .green-30-80 {
     background-color: #60ba62;
-    width: 30px;
-    height: 30px;
-    border-radius: 15px;
+    width: 24px;
+    height: 24px;
+    border-radius: 12px;
     position: relative;
-    right: 43%;
+    right: 49%;
     top: 26%;
   }
   .green-97-27 {
@@ -1734,8 +1771,8 @@ body {
   }
   .absolute-r-60 {
     position: absolute;
-    right: -31px;
-    bottom: -120px;
+    right: -10px;
+    bottom: -135px;
   }
   .f-w-200 {
     width: 140px;
@@ -1751,48 +1788,67 @@ body {
   }
   .f-gray-148 {
     background-color: #ebebeb;
-    width: 100px;
-    height: 100px;
-    border-radius: 74px;
+    width: 70px;
+    height: 70px;
+    border-radius: 35px;
     position: relative;
     right: 72%;
-    top: 10px;
+    top: 150px;
   }
   .fif-gr-30 {
     background-color: #60ba62;
     width: 30px;
     height: 30px;
     border-radius: 15px;
-    position: relative;
-    right: 5%;
+    position: absolute;
+    left: 5%;
     top: 5%;
+  }
+  .fif-grr-10 {
+    background-color: #60ba62;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    position: absolute;
+    left: 24%;
+    margin-top: 43%;
+  }
+  .fif-grr-30 {
+    background-color: #60ba62;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    position: absolute;
+    left: 16%;
+    margin-top: -30%;
   }
   .fif-absolute-489 {
     width: 190px;
     height: 241px;
     position: relative;
-    right: 1%;
+    right: 18%;
     top: 62%;
   }
   .fif-absolute-489-l {
     width: 190px;
     height: 241px;
     position: absolute;
-    left: 3%;
-    top: 59%;
+    left: 18%;
+    top: 58.5%;
   }
   .navbar-area.is-sticky {
     position: relative;
   }
   .fif-gray-206 {
     background-color: #ebebeb;
-    width: 206px;
-    height: 206px;
-    border-radius: 103px;
-    position: relative;
-    right: 99%;
-    display: none;
-    top: 10px;
+    width: 66px;
+    height: 66px;
+    border-radius: 33px;
+    position: absolute;
+    left: 5%;
+    /* display: none; */
+    /* top: 10px; */
+    margin-top: -70px;
   }
   .fea-img {
     position: absolute;
@@ -1897,7 +1953,7 @@ body {
     top: 20px;
   }
   .faq-img-270 {
-    width: 200px;
+    width: 150px;
   }
   .faq-g-20 {
     background-color: #60ba62;
@@ -1911,7 +1967,7 @@ body {
   .faq-fourth-img {
     position: absolute;
     right: 0px;
-    bottom: 300px;
+    bottom: 120px;
   }
   .faq-img-200 {
     width: 120px;
@@ -1957,6 +2013,15 @@ body {
     position: relative;
     right: 99%;
     top: 10px;
+  }
+  .faq-fif-grr-30 {
+    background-color: #60ba62;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    position: absolute;
+    left: 16%;
+    margin-top: -30%;
   }
   .faq-man-img {
     width: 489px;
@@ -2055,12 +2120,12 @@ body {
   }
   .app-green-50 {
     background-color: #60ba62;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
     position: absolute;
     left: 5%;
-    top: 44%;
+    top: 61%;
   }
   .app-gray-148 {
     background-color: #ebebeb;
@@ -2108,8 +2173,17 @@ body {
     height: 50px;
     border-radius: 25px;
     position: absolute;
-    margin-right: -150px;
-    top: 50%;
+    left: 62px;
+    top: 71%;
+  }
+  .app-g-10 {
+    background-color: #60ba62;
+    width: 15px;
+    height: 15px;
+    border-radius: 25px;
+    position: absolute;
+    left: 137px;
+    top: 69%;
   }
   .app-gray-200 {
     background-color: #ebebeb;
