--- a/assets/css/own.css
+++ b/assets/css/own.css
@@ -203,8 +203,8 @@ body {
     padding-top: 0%;
   }
   .img-w-146 {
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    padding-top: 20px;
   }
   .footer-widget {
     padding-top: 0%;
@@ -743,6 +743,28 @@ body {
     position: absolute;
     top: -41px;
     right: 50px;
+  }
+  .instagram {
+    width: 14px;
+    padding-top: 20px;
+  }
+  .twitter {
+    width: 14px;
+    padding-top: 20px;
+  }
+  .google-store {
+    width: 14px;
+    padding-top: 20px;
+  }
+  .apple-store {
+    width: 14px;
+    padding-top: 20px;
+  }
+  .footer-widget .social-link li {
+    margin-left: 1px !important;
+  }
+  .footer-widget .footer-contact li .content span {
+    font-size: 12px;
   }
 }
 @media (min-width: 481px) {
@@ -4228,5 +4250,27 @@ body {
     position: absolute;
     top: 100px;
     right: 100px;
+  }
+  .instagram {
+    width: 30px;
+    height: 26px;
+  }
+  .twitter {
+    width: 30px;
+    height: 26px;
+  }
+  .google-store {
+    width: 30px;
+    height: 30px;
+  }
+  .apple-store {
+    width: 30px;
+    height: 26px;
+  }
+  .footer-widget .social-link li {
+    margin-left: 10px !important;
+  }
+  .footer-widget .footer-contact li .content span {
+    font-size: 15px;
   }
 }
