--- a/assets/css/own.css
+++ b/assets/css/own.css
@@ -2864,8 +2864,6 @@ body {
 }
 
 @media (min-width: 961px) {
-  /* tablet, landscape iPad, lo-res laptops ands desktops */
-  /* smartphones, iPhone, portrait 480x320 phones */
   .container-fluid {
     width: 100% !important;
     max-width: 100% !important;
@@ -2885,8 +2883,8 @@ body {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   .show-mobile {
     display: none;
@@ -2968,7 +2966,7 @@ body {
     color: #959494;
   }
   .section-title .header-text-second {
-    font-size: 150px;
+    font-size: 125px;
     font-family: "SSTMedium";
     color: #60ba62;
   }
@@ -2996,13 +2994,15 @@ body {
     display: block;
   }
   .apple {
-    width: 200px;
+    width: 223px;
     display: block;
+    padding-top: 35px;
     margin: auto;
+    margin-right: -26px;
   }
   .google {
     width: 110px;
-    padding-top: 5px;
+    padding-top: 65px;
     display: block;
     margin: auto;
   }
@@ -3235,20 +3235,20 @@ body {
   .fea-img {
     position: absolute;
     left: 0px;
-    top: 220px;
+    top: 259px;
     z-index: 100;
   }
   .fea-w-280 {
-    width: 430px;
+    width: 490px;
   }
   .fea-hand-img {
     position: absolute;
     left: 0px;
-    top: 420px;
+    top: 480px;
     z-index: 100;
   }
   .fea-hand-w {
-    width: 550px;
+    width: 620px;
   }
   .home-green-30 {
     background-color: #60ba62;
@@ -3273,7 +3273,7 @@ body {
     left: 60px;
   }
   .thi-t-img {
-    width: 450px;
+    width: 350px;
   }
   .third-g-30 {
     background-color: #60ba62;
@@ -3286,7 +3286,7 @@ body {
   }
   .fourth-img-des {
     position: absolute;
-    left: -31px;
+    left: -50px;
     top: 192px;
   }
   .fourth-w {
@@ -3453,8 +3453,8 @@ body {
     border-radius: 125px;
     /* margin: auto; */
     position: absolute;
-    top: 10px;
-    right: 20%;
+    top: 100px;
+    right: 1%;
   }
   .contact-g-50 {
     background-color: #60ba62;
@@ -3471,7 +3471,7 @@ body {
     height: 30px;
     border-radius: 15px;
     position: absolute;
-    margin-right: 124px;
+    left: 30%;
     top: 50%;
   }
   .contact-gr-250 {
@@ -3487,6 +3487,7 @@ body {
   .contact-ab {
     display: block;
     position: relative;
+    margin-right: 180px;
   }
   /*app start*/
   .app-green-50 {
@@ -3495,8 +3496,8 @@ body {
     height: 50px;
     border-radius: 25px;
     position: absolute;
-    left: 5%;
-    top: 44%;
+    right: 11%;
+    top: 140%;
   }
   .app-gray-148 {
     background-color: #ebebeb;
@@ -3514,14 +3515,14 @@ body {
     border-radius: 25px;
     position: relative;
     right: 0%;
-    top: 27px;
+    top: 459px;
   }
   .app-img {
-    width: 270px;
+    width: 370px;
   }
   .app-absolute {
     position: absolute;
-    left: 60px;
+    left: 15px;
     top: 15%;
   }
   .app-text-gray {
@@ -3543,7 +3544,19 @@ body {
     border-radius: 25px;
     position: absolute;
     margin-right: -150px;
-    top: 50%;
+    top: 62%;
+  }
+  .app-gray-text-center {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: right;
+  }
+  .app-text-gray {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
   }
   .app-gray-200 {
     background-color: #ebebeb;
@@ -3590,7 +3603,65 @@ body {
   .pl-250 {
     margin-left: 250px;
   }
+  .mt-33 {
+    margin-top: 120px;
+  }
+  .f-left-index-arrow {
+    position: absolute;
+    left: 0px;
+    margin-top: 18%;
+  }
+  .f-right-index-arrow {
+    position: absolute;
+    right: 0px;
+    margin-top: 18%;
+  }
+  .f-left-index-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-right-index-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-left-home-arrow {
+    position: absolute;
+    left: 0px;
+    margin-top: 12%;
+  }
+  .f-right-home-arrow {
+    position: absolute;
+    right: 0px;
+    margin-top: 12%;
+  }
+  .f-left-home-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-right-home-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-left-faq-arrow {
+    position: absolute;
+    left: 0px;
+    margin-top: 28%;
+  }
+  .f-right-faq-arrow {
+    position: absolute;
+    right: 0px;
+    margin-top: 28%;
+  }
+  .f-left-faq-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-right-faq-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
 }
+
 @media (min-width: 1025px) {
   .container-fluid {
     width: 100% !important;
@@ -3611,8 +3682,8 @@ body {
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 0;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   .show-mobile {
     display: none;
@@ -3694,7 +3765,7 @@ body {
     color: #959494;
   }
   .section-title .header-text-second {
-    font-size: 150px;
+    font-size: 125px;
     font-family: "SSTMedium";
     color: #60ba62;
   }
@@ -3722,13 +3793,15 @@ body {
     display: block;
   }
   .apple {
-    width: 200px;
+    width: 223px;
     display: block;
+    padding-top: 35px;
     margin: auto;
+    margin-right: -26px;
   }
   .google {
     width: 110px;
-    padding-top: 5px;
+    padding-top: 65px;
     display: block;
     margin: auto;
   }
@@ -3961,20 +4034,20 @@ body {
   .fea-img {
     position: absolute;
     left: 0px;
-    top: 220px;
+    top: 259px;
     z-index: 100;
   }
   .fea-w-280 {
-    width: 430px;
+    width: 490px;
   }
   .fea-hand-img {
     position: absolute;
     left: 0px;
-    top: 420px;
+    top: 480px;
     z-index: 100;
   }
   .fea-hand-w {
-    width: 550px;
+    width: 620px;
   }
   .home-green-30 {
     background-color: #60ba62;
@@ -3999,7 +4072,7 @@ body {
     left: 60px;
   }
   .thi-t-img {
-    width: 450px;
+    width: 350px;
   }
   .third-g-30 {
     background-color: #60ba62;
@@ -4012,11 +4085,11 @@ body {
   }
   .fourth-img-des {
     position: absolute;
-    left: -231px;
+    left: -50px;
     top: 192px;
   }
   .fourth-w {
-    width: 450px;
+    width: 350px;
   }
   .fourth-des-text {
     position: absolute;
@@ -4179,8 +4252,8 @@ body {
     border-radius: 125px;
     /* margin: auto; */
     position: absolute;
-    top: 10px;
-    right: 20%;
+    top: 100px;
+    right: 1%;
   }
   .contact-g-50 {
     background-color: #60ba62;
@@ -4197,7 +4270,7 @@ body {
     height: 30px;
     border-radius: 15px;
     position: absolute;
-    margin-right: 124px;
+    left: 30%;
     top: 50%;
   }
   .contact-gr-250 {
@@ -4213,6 +4286,7 @@ body {
   .contact-ab {
     display: block;
     position: relative;
+    margin-right: 180px;
   }
   /*app start*/
   .app-green-50 {
@@ -4221,8 +4295,8 @@ body {
     height: 50px;
     border-radius: 25px;
     position: absolute;
-    left: 5%;
-    top: 44%;
+    right: 11%;
+    top: 140%;
   }
   .app-gray-148 {
     background-color: #ebebeb;
@@ -4240,14 +4314,14 @@ body {
     border-radius: 25px;
     position: relative;
     right: 0%;
-    top: 27px;
+    top: 459px;
   }
   .app-img {
     width: 370px;
   }
   .app-absolute {
     position: absolute;
-    left: 60px;
+    left: 15px;
     top: 15%;
   }
   .app-text-gray {
@@ -4269,7 +4343,19 @@ body {
     border-radius: 25px;
     position: absolute;
     margin-right: -150px;
-    top: 50%;
+    top: 62%;
+  }
+  .app-gray-text-center {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: right;
+  }
+  .app-text-gray {
+    font-size: 44px;
+    color: #959494;
+    font-family: "SSTBold";
+    text-align: center;
   }
   .app-gray-200 {
     background-color: #ebebeb;
@@ -4316,7 +4402,65 @@ body {
   .pl-250 {
     margin-left: 250px;
   }
+  .mt-33 {
+    margin-top: 120px;
+  }
+  .f-left-index-arrow {
+    position: absolute;
+    left: 0px;
+    margin-top: 18%;
+  }
+  .f-right-index-arrow {
+    position: absolute;
+    right: 0px;
+    margin-top: 18%;
+  }
+  .f-left-index-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-right-index-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-left-home-arrow {
+    position: absolute;
+    left: 0px;
+    margin-top: 12%;
+  }
+  .f-right-home-arrow {
+    position: absolute;
+    right: 0px;
+    margin-top: 12%;
+  }
+  .f-left-home-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-right-home-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-left-faq-arrow {
+    position: absolute;
+    left: 0px;
+    margin-top: 28%;
+  }
+  .f-right-faq-arrow {
+    position: absolute;
+    right: 0px;
+    margin-top: 28%;
+  }
+  .f-left-faq-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
+  .f-right-faq-arrow-img {
+    width: 20px;
+    height: 20px;
+  }
 }
+
 @media (min-width: 1281px) {
   .container-fluid {
     width: 100% !important;
@@ -5115,6 +5259,7 @@ body {
     height: 20px;
   }
 }
+
 @media (min-width: 1500px) {
   .contact-form .form-group .form-control {
     height: 64px;
